<package>
  <name>gingerurdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for gingerurdf</p>
    <p>This package contains configuration data, 3D models and launch files for gingerurdf robot</p>
  </description>
  <author>me</author>
  <maintainer email="tianhao.wang@cloudminds.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <export>
    <architecture_independent/>
  </export>

</package>
